# notes

./: .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  quartz.config.ts  quartz.layout.ts  sitemap.xml
.github/workflows/: ci.yml
content/: index.md
content/Data Science/: ab-test.md
content/Machine Learning/: ab-testing.md  algebra-projections.md  bm25.md  covariance.md  eigenvalues-eigenvectors.md  factual-correctness.md  linear-algebra.md  linear-transformation.md  machine-learning.md  markov-chains.md  matrix.md  pca.md  retrieval-augmented-generation.md  shannon-entropy.md  sonde.md  tf-idf.md  variance.md  vector.md  vera-validation-enhancement-rag.md
content/Packages and Tooling/: homebrew.md  numpy.md  poetry.md  python-dotenv.md  tmux.md  uv.md
content/Software Engineering/: Dotfiles.md  JSON.md  Test page.md  apis.md  callback-functions.md  ci-cd.md  code-doc.md  code-style.md  conv-commits.md  decorators.md  design-patterns.md  ejs.md  environment-variables.md  express.md  infrastructure-as-code.md  javascript.md  json.md  jsonl.md  logging.md  makefile.md  mongodb.md  nodejs.md  oop.md  python-data-classes.md  python-dotenv.md  rest-api.md  shell.md  sql.md  terminal.md  terraform.md  tests.md  yaml.md
data-science/ab-testing/: index.html
docs/: index.md  main.py  test.md
docs/data-science/: M_ab-testing.md
docs/examples/: example_mkdocs_material.md  example_nb.ipynb
notebooks/: ab-testing.ipynb  entropy.ipynb  numpy.ipynb  sonde.ipynb
search/: search_index.json
utils/: fetch-pub-notes.py
(+26 files in other folders)
