[tool.poetry]
name = "notes"
version = "0.1.0"
description = "Personal reference material and notes"
authors = ["Lucas Verneck <49991581+lpverneck@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs-material = "^9.5.39"
mkdocs-jupyter = "^0.25.0"
notebook = "^7.2.2"
jupyter-contrib-nbextensions = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
