[tool.poetry]
name = "notes"
version = "0.1.0"
description = "Personal reference material and notes"
authors = ["Lucas Verneck <49991581+lpverneck@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
regex = "^2024.11.6"
tqdm = "^4.67.0"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
